--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,4 +2,5 @@ version: "3"
 services:
   postgres:
     image: "postgres:latest" # Use the official postgres image
- 
+  redis:
+    image: "redis:latest" # Use the official redis image
