Add Redis service and server configuration to docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,15 @@ services:
     image: "postgres:latest" # Use the official postgres image
   redis:
     image: "redis:latest" # Use the official redis image
+  server :
+    build: 
+      context: ./server
+      dockerfile: Dockerfile.dev
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+      - redis
+    environment:
+      - DATABASE_URL=postgres://postgres@postgres:5432
+      - REDIS_URL=redis://redis:6379
