--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,11 +8,6 @@ services:
     build: 
       context: ./server
       dockerfile: Dockerfile.dev
-    ports:
-      - "3000:3000"
-    depends_on:
-      - postgres
-      - redis
-    environment:
-      - DATABASE_URL=postgres://postgres@postgres:5432
-      - REDIS_URL=redis://redis:6379
+    volumes:
+      - /app/node_modules
+      - ./server:/app
