--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,8 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
+  
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile.dev
