--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,3 +24,11 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile.dev
+  worker;
+    build:
+      context: ./worker
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - ./client:/app
+  
