--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,11 +24,11 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile.dev
-  worker;
+  worker:
     build:
       context: ./worker
       dockerfile: Dockerfile.dev
     volumes:
       - /app/node_modules
       - ./client:/app
-  
+   
