--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,21 +1,25 @@
-upstream  client {
+# Define upstream server for the client
+upstream client {
     server client:3000;
 }
 
+# Define upstream server for the API
 upstream api {
     server api:5000;
 }
 
-
+# Configure the main server block
 server {
-    listen 80;
+    listen 80;  # Listen on port 80
 
+    # Handle requests for the root path
     location / {
-        proxy_pass http://client;
+        proxy_pass http://client;  # Proxy requests to the client server
     }
 
+    # Handle requests for the /api path
     location /api {
-        rewrite /api/(.*) /$1 break;
-        proxy_pass http://api;
+        rewrite /api/(.*) /$1 break;  # Rewrite the URL to remove the /api prefix
+        proxy_pass http://api;  # Proxy requests to the API server
     }
 }
