Refactor nginx configuration for API server proxying

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,25 +1,24 @@
-# Define upstream server for the client
-upstream client {
+# This file contains the configuration for the NGINX server.
+# It specifies the settings and rules for handling incoming requests.
+
+upstream  client {
     server client:3000;
 }
 
-# Define upstream server for the API
 upstream api {
     server api:5000;
 }
 
-# Configure the main server block
-server {
-    listen 80;  # Listen on port 80
 
-    # Handle requests for the root path
+server {
+    listen 80;
+
     location / {
-        proxy_pass http://client;  # Proxy requests to the client server
+        proxy_pass http://client;
     }
 
-    # Handle requests for the /api path
     location /api {
-        rewrite /api/(.*) /$1 break;  # Rewrite the URL to remove the /api prefix
-        proxy_pass http://api;  # Proxy requests to the API server
+        rewrite /api/(.*) /$1 break;
+        proxy_pass http://api;
     }
 }
