--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,18 @@ services:
     image: "postgres:latest" # Use the official postgres image
   redis:
     image: "redis:latest" # Use the official redis image
+  nginx:
+    restart: always
+    image: "nginx:latest" # Use the official nginx image
+    ports:
+      - "3050:80"
+    depends_on:
+      - api
+      - client
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+  
+  
   api :
     build: 
       context: ./server
