--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: "3"
 services:
   postgres:
     image: "postgres:latest" # Use the official postgres image
+    environment:
+      - POSTGRES_PASSWORD=postgres_password
   redis:
     image: "redis:latest" # Use the official redis image
   nginx:
