--- a/worker/package.json
+++ b/worker/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "nodemon": "1.18.3",
-    "redis": "2.8.0"
+    "nodemon": "^1.18.3",
+    "redis": "^2.8.0"
   },
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
