Update docker-compose.yaml to include client volume and stdin_open for better development experience

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,11 +35,14 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
-  
   client:
+    stdin_open: true
     build:
       context: ./client
       dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - ./client:/app
   worker:
     build:
       context: ./worker
