--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,7 +48,7 @@ services:
       context: ./worker
       dockerfile: Dockerfile.dev
     volumes:
-      - /app/node_modules
+      -  .:/app
       - ./client:/app
     environment:  
       - REDIS_HOST=redis
