Update docker-compose.yaml to include /app/node_modules volume for better development experience

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
       context: ./worker
 
     volumes:
-      -  .:/app
+      - /app/node_modules
       - ./client:/app
     environment:  
       - REDIS_HOST=redis
