--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,11 @@
     "react-scripts": "3.4.3",
     "react-router-dom": "4.3.1",
     "axios": "0.18.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "react-router-dom": "4.3.1",
+    "axios": "0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
