--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,25 @@
-version: "3"
+version: '3'
 services:
   postgres:
-    image: "postgres:latest" # Use the official postgres image
+    image: 'postgres:latest'
     environment:
       - POSTGRES_PASSWORD=postgres_password
   redis:
-    image: "redis:latest" # Use the official redis image
+    image: 'redis:latest'
   nginx:
-    restart: always
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile.dev
-    ports:
-      - "3050:80"
     depends_on:
       - api
       - client
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-  
-  
-  api :
-    build: 
-      context: ./server
+    restart: always
+    build:
       dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '3050:80'
+  api:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./server
     volumes:
       - /app/node_modules
       - ./server:/app
@@ -38,8 +34,8 @@ services:
   client:
     stdin_open: true
     build:
-      context: ./client
       dockerfile: Dockerfile.dev
+      context: ./client
     volumes:
       - /app/node_modules
       - ./client:/app
@@ -47,11 +43,9 @@ services:
     build:
       dockerfile: Dockerfile.dev
       context: ./worker
-
     volumes:
       - /app/node_modules
-      - ./client:/app
-    environment:  
+      - ./worker:/app
+    environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-   
