--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,13 @@
     "react-router-dom": "4.3.1",
     "axios": "^0.21.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "react-scripts --openssl-legacy-provider start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+}
+,
   "eslintConfig": {
     "extends": "react-app"
   },
