--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on:
     push:
         branches:
-            - main
+            -kimutaieddy-patch-1
     pull_request:
         branches:
             - main
