Refactor Dockerfile and nginx configuration for client server deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
             -kimutaieddy-patch-1
     pull_request:
         branches:
-            - main
+            - kimutaieddy-patch-1
 
 jobs:
     build:
