Add jobs on githubactions main.yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,54 @@ on:
             - kimutaieddy-patch-1
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build_and_deploy:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-                uses: actions/checkout@v2
+    steps:
+      # Checkout the repository code
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-            # Add your build and test steps here
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-            - name: Deploy to production
-                uses: some-action-for-deployment@v1
-                with:
-                    environment: production
+      # Install dependencies for client (React) project
+      - name: Install client dependencies
+        run: npm install
+        working-directory: ./client
+
+      # Run tests for client (React) project
+      - name: Run client tests
+        run: npm test
+        working-directory: ./client
+
+      # Build production version of client (React) project
+      - name: Build client project
+        run: npm run build
+        working-directory: ./client
+
+      # Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Build Docker images for all components
+      - name: Build Docker images
+        run: |
+          docker build -t your-dockerhub-username/server:latest -f ./server/Dockerfile ./server
+          docker build -t your-dockerhub-username/nginx:latest -f ./nginx/Dockerfile ./nginx
+          docker build -t your-dockerhub-username/worker:latest -f ./worker/Dockerfile ./worker
+          docker build -t your-dockerhub-username/client:latest -f ./client/Dockerfile ./client
+
+      # Push Docker images to Docker Hub
+      - name: Push Docker images
+        run: |
+          docker push your-dockerhub-username/server:latest
+          docker push your-dockerhub-username/nginx:latest
+          docker push your-dockerhub-username/worker:latest
+          docker push your-dockerhub-username/client:latest
