--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - kimutaieddy-patch-1
   pull_request:
     branches:
-      - main
+      - kimutaieddy-patch-1
 
 jobs:
   build_and_deploy:
