chore: Update Docker build commands, login credentials, and npm build command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,28 +55,14 @@ jobs:
 
       # Build production version of client (React) project
       - name: Build client project
+        env:
+          NODE_OPTIONS: --openssl-legacy-provider
         run: npm run build
         working-directory: ./client
 
-      # Debugging Step: List directories
-      - name: List directory contents
-        run: |
-          echo "Server directory:"
-          ls -l ./server
-          echo "Worker directory:"
-          ls -l ./worker
-          echo "Client directory:"
-          ls -l ./client
-          echo "Nginx directory:"
-          ls -l ./nginx
-
-      # Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       # Log in to Docker Hub
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v2.1.0
         with:
           username: kimutaieddy
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -84,10 +70,10 @@ jobs:
       # Build and tag Docker images
       - name: Build and tag Docker images
         run: |
-          docker build -t kimutaieddy/server:latest -f ./server
-          docker build -t kimutaieddy/nginx:latest -f ./nginx
-          docker build -t kimutaieddy/worker:latest -f ./worker
-          docker build -t kimutaieddy/client:latest -f ./client
+          docker build -t kimutaieddy/server:latest -f ./server/Dockerfile ./server
+          docker build -t kimutaieddy/nginx:latest -f ./nginx/Dockerfile ./nginx
+          docker build -t kimutaieddy/worker:latest -f ./worker/Dockerfile ./worker
+          docker build -t kimutaieddy/client:latest -f ./client/Dockerfile ./client
 
       # Push Docker images to Docker Hub
       - name: Push Docker images
