--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - kimutaieddy-patch-1
+      - main
   pull_request:
     branches:
-      - kimutaieddy-patch-1
+      - main 
 
 jobs:
   build_and_deploy:
