Refactor deployment workflow to include deployment step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,5 @@ jobs:
           docker push kimutaieddy/nginx:latest
           docker push kimutaieddy/worker:latest
           docker push kimutaieddy/client:latest
+  deploy:
+    
