--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,5 +57,5 @@ jobs:
           docker push kimutaieddy/worker:latest
           docker push kimutaieddy/client:latest
   deploy:
-    provider: heroku
+    provider: elasticbeanstalk
 
