Refactor deployment workflow to include AWS access key ID for Elastic Beanstalk deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,4 +58,5 @@ jobs:
           docker push kimutaieddy/client:latest
   deploy:
     provider: elasticbeanstalk
+    access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
 
