Refactor deployment workflow to include AWS access key ID and secret access key for Elastic Beanstalk deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,5 +58,7 @@ jobs:
           docker push kimutaieddy/client:latest
   deploy:
     provider: elasticbeanstalk
+    region: 'us-east-1'
     access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
