Refactor deployment workflow to include app name for Elastic Beanstalk deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,8 @@ jobs:
   deploy:
     provider: elasticbeanstalk
     region: 'us-east-1'
+    app: 'multi-docker'
+    
     access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
     secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
