Refactor deployment workflow to include bucket name for Elastic Beanstalk deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
     region: 'us-east-1'
     app: 'multi-docker'
     env: 'MultiDocker-env'
+    bucket_name: 'elasticbeanstalk-us-east-1-891376912432'
     access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
     secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
