--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,11 +57,16 @@ jobs:
           docker push kimutaieddy/worker:latest
           docker push kimutaieddy/client:latest
   deploy:
-         provider: elasticbeanstalk
-        region: 'us-east-1'
-        app: 'multi-docker'
-        env: 'MultiDocker-env'
-        bucket_name: 'elasticbeanstalk-us-east-1-891376912432'
-        access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    runs-on: ubuntu-latest
+    needs: build_and_deploy
+    steps:
+      - name: Deploy to Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v19
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: 'multi-docker'
+          environment_name: 'MultiDocker-env'
+          region: 'us-east-1'
+          version_label: 'latest'
 
