--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,16 +57,15 @@ jobs:
           docker push kimutaieddy/worker:latest
           docker push kimutaieddy/client:latest
   deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_deploy
-    steps:
-      - name: Deploy to Elastic Beanstalk
-        uses: einaregilsson/beanstalk-deploy@v19
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: 'multi-docker'
-          environment_name: 'MultiDocker-env'
-          region: 'us-east-1'
-          version_label: 'latest'
+    provider: elasticbeanstalk
+    region: 'us-east-1'
+    app: 'multi-docker'
+    env: 'MultiDocker-env'
+    bucket_name: 'elasticbeanstalk-us-east-1-891376912432'
+    bucket_path: 'docker-multi'
+    on:
+      branch: main
+    access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+``` set up the AWS Elastic Beanstalk environment and deploy the application. The `deploy` job is triggered when a push is made to the `main` branch. The job uses the `elasticbeanstalk` provider to deploy the application to the AWS Elastic Beanstalk environment. The `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY` secrets are used to authenticate the deployment process.
 
