--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,12 +68,11 @@ jobs:
     - name: Deploy to Elastic Beanstalk
       uses: einaregilsson/beanstalk-deploy@v18
       with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: 'multi-docker'
-        environment_name: 'MultiDocker-env'
-        region: 'us-east-1'
-        version_label: 'some-version'
-        bucket_name: 'elasticbeanstalk-us-east-1-891376912432'
-        bucket_key: 'docker-multi/${{ github.sha }}.zip'
-        wait_for_deployment: true
+          application: 'multi-docker'
+          environment: 'MultiDocker-env'
+          region: 'us-east-1'
+          bucket_name: 'elasticbeanstalk-us-east-1-891376912432'
+          bucket_path: 'docker-multi'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
