--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,41 @@ jobs:
           docker push kimutaieddy/nginx:latest
           docker push kimutaieddy/worker:latest
           docker push kimutaieddy/client:latest
+  name: Deploy to Elastic Beanstalk
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14' # Use the Node.js version you need
+
+    - name: Set up AWS CLI
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1 # Use your AWS region
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Deploy to Elastic Beanstalk
+      env:
+        EB_ENV: your-environment-name # Replace with your Elastic Beanstalk environment name
+      run: |
+        npm run build
+        zip -r deploy.zip .
+        aws elasticbeanstalk create-application-version --application-name $EB_ENV --version-label v1 --source-bundle S3Bucket=your-s3-bucket,S3Key=deploy.zip
+        aws elasticbeanstalk update-environment --environment-name $EB_ENV --version-label v1
