--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: Deploy to Elastic Beanstalk
       env:
-        EB_ENV: your-environment-name # Replace with your Elastic Beanstalk environment name
+        EB_ENV: Multicontainer-env # Replace with your Elastic Beanstalk environment name
       run: |
         npm run build
         zip -r deploy.zip .
