--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build_and_deploy:
+  build_and_push:
     runs-on: ubuntu-latest
 
     steps:
@@ -56,29 +56,37 @@ jobs:
           docker push kimutaieddy/nginx:latest
           docker push kimutaieddy/worker:latest
           docker push kimutaieddy/client:latest
-      steps:
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+
+    steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14' # Use the Node.js version you need
+          node-version: '14'
+
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 # Use your AWS region
+          aws-region: us-east-1
 
       - name: Install dependencies
         run: npm install
 
       - name: Deploy to Elastic Beanstalk
         env:
-          EB_ENV: Multicontainer-env # Replace with your Elastic Beanstalk environment name
+          EB_ENV: Multicontainer-env
+          S3_BUCKET: elasticbeanstalk-us-east-1-891376912432
         run: |
           npm run build
           zip -r deploy.zip .
-          aws elasticbeanstalk create-application-version --application-name $EB_ENV --version-label v1 --source-bundle S3Bucket=elasticbeanstalk-us-east-1-891376912432,S3Key=deploy.zip
+          aws s3 cp deploy.zip s3://$S3_BUCKET/deploy.zip
+          aws elasticbeanstalk create-application-version --application-name $EB_ENV --version-label v1 --source-bundle S3Bucket=$S3_BUCKET,S3Key=deploy.zip
           aws elasticbeanstalk update-environment --environment-name $EB_ENV --version-label v1
