--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,22 +23,22 @@ jobs:
 
       - name: Install and Test Server
         run: |
+          cd server
           npm install
           npm test
-        working-directory: ./server
 
       - name: Install and Test Worker
         run: |
+          cd worker
           npm install
           npm test
-        working-directory: ./worker
 
       - name: Install, Test, and Build Client
         run: |
+          cd client
           npm install
           npm test
           npm run build
-        working-directory: ./client
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2.1.0
