--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: client
 
       - name: Deploy to Elastic Beanstalk
         env:
